--- a/brain/src/main/resources/templates/mainLayout.html
+++ b/brain/src/main/resources/templates/mainLayout.html
@@ -76,6 +76,7 @@
 								<li><a><i class="fa fa-table"></i> Estadísticas <span
 										class="fa fa-chevron-down"></span></a>
 									<ul class="nav child_menu" style="display: none">
+										<li><a href="index.html">Información del reporte</a></li>
 										<li><a href="weekResume.html">Resumen de la Semana</a></li>
 										<li><a href="performance.html">Desempeño</a></li>
 									</ul></li>
@@ -210,16 +211,15 @@
 					</div>
 					<div class="clearfix"></div>
 
-					<div class="row">
-						${content}
-					</div>
+					<div class="row">${content}</div>
 				</div>
 				<!-- footer content -->
 
 				<footer>
 					<div class="copyright-info">
 						<p class="pull-right">
-							INFOTEC-DADS Copyright © 2016 Derechos reservados <a href="https://infotec.mx/">INFOTEC</a>
+							INFOTEC-DADS Copyright © 2016 Derechos reservados <a
+								href="https://infotec.mx/">INFOTEC</a>
 						</p>
 					</div>
 					<div class="clearfix"></div>
