Add user interface Feature

--- a/brain/src/main/resources/templates/mainLayout.html
+++ b/brain/src/main/resources/templates/mainLayout.html
@@ -79,6 +79,7 @@
 										<li><a href="index.html">Información del reporte</a></li>
 										<li><a href="weekResume.html">Resumen de la Semana</a></li>
 										<li><a href="performance.html">Desempeño</a></li>
+										<li><a href="size.html">Tamaño</a></li>
 									</ul></li>
 								<li><a><i class="fa fa-bar-chart-o"></i> Gráficas <span
 										class="fa fa-chevron-down"></span></a>
