--- a/brain/src/main/resources/styles/styles.css
+++ b/brain/src/main/resources/styles/styles.css
@@ -27,7 +27,7 @@
 }
 
 .hello-message {
-    -fx-text-fill: #AA0000;
+    -fx-text-fill: #31698A;
     -fx-font-weight: bold;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
