--- a/brain/src/main/resources/fxml/Properties.fxml
+++ b/brain/src/main/resources/fxml/Properties.fxml
@@ -51,6 +51,10 @@
 						<ButtonBar layoutX="54.0" layoutY="250.0"
 							AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
 							<buttons>
+								<Button fx:id="btnSaveProperties" text="Regresar"
+									onAction="#goMainScreen" />
+							</buttons>
+							<buttons>
 								<Button fx:id="btnSaveProperties" text="Guardar"
 									onAction="#saveProperties" />
 							</buttons>
