--- a/brain/src/main/resources/fxml/Main.fxml
+++ b/brain/src/main/resources/fxml/Main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -9,62 +10,44 @@
 <?import javafx.collections.FXCollections ?>
 <?import javafx.scene.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0"
-	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.danimaniarqsoft.brain.controller.PdesReportController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.danimaniarqsoft.brain.controller.PdesReportController">
 	<children>
-		<SplitPane dividerPositions="0.29797979797979796" layoutX="153.0"
-			layoutY="70.0" prefHeight="300.0" prefWidth="600.0"
-			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane layoutX="153.0" layoutY="70.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0"
-					prefWidth="100.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="298.0">
 					<children>
-						<Label layoutX="104.0" layoutY="51.0"
-							text="Generación de Reporte Semanal" AnchorPane.leftAnchor="5.0"
-							AnchorPane.topAnchor="5.0" />
-						<GridPane layoutX="43.0" layoutY="104.0"
-							AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
-							AnchorPane.topAnchor="30.0">
+						<Label layoutX="104.0" layoutY="51.0" text="Generación de Reporte Semanal" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+						<GridPane layoutX="10.0" layoutY="34.0" prefHeight="96.0" prefWidth="314.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="74.0" AnchorPane.topAnchor="34.0">
 							<columnConstraints>
-								<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-									prefWidth="100.0" />
-								<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-									prefWidth="100.0" />
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="289.0" minWidth="10.0" prefWidth="157.0" />
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="10.0" prefWidth="115.0" />
 							</columnConstraints>
 							<rowConstraints>
-								<RowConstraints minHeight="10.0" prefHeight="30.0"
-									vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0"
-									vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints />
+                        <RowConstraints />
 							</rowConstraints>
 							<children>
 								<Label text="Nombre del Proyecto: " />
-								<Label fx:id="projectName" GridPane.columnIndex="1"
-									GridPane.rowIndex="0" />
+								<Label fx:id="projectName" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
 								<Label text="Puerto: " GridPane.rowIndex="1" />
-								<Label fx:id="port" GridPane.columnIndex="1"
-									GridPane.rowIndex="1" />
+								<Label fx:id="port" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
 								<Label text="Tipo de Reporte" GridPane.rowIndex="2" />
-								<ComboBox fx:id="cbxTipoReportId" GridPane.columnIndex="1"
-									GridPane.rowIndex="2">
+								<ComboBox fx:id="cbxTipoReportId" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
 									<items>
 										<FXCollections fx:factory="observableArrayList">
 										</FXCollections>
 									</items>
 								</ComboBox>
-								<Label fx:id="messageLabel" GridPane.columnIndex="1"
-									GridPane.rowIndex="3" styleClass="hello-message" />
+								<Label fx:id="messageLabel" styleClass="hello-message" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 							</children>
 						</GridPane>
-						<ButtonBar layoutX="54.0" layoutY="250.0"
-							AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+						<ButtonBar layoutX="54.0" layoutY="250.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
 							<buttons>
-								<Button fx:id="btnProperties" text="Editar Propiedades"
-									onAction="#goPropertiesScreen" />
+								<Button fx:id="btnProperties" onAction="#goPropertiesScreen" text="Editar Propiedades" />
 							</buttons>
 							<buttons>
 								<Button fx:id="btnReportId" text="Generar Reporte" />
