--- a/brain/src/main/resources/fxml/Properties.fxml
+++ b/brain/src/main/resources/fxml/Properties.fxml
@@ -5,58 +5,39 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import layouttests.migfxml.sample1.*?>
-<?import org.tbee.javafx.scene.layout.fxml.MigPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0"
-	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.danimaniarqsoft.brain.controller.PropertiesController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.danimaniarqsoft.brain.controller.PropertiesController">
 	<children>
-		<SplitPane dividerPositions="0.29797979797979796" layoutX="153.0"
-			layoutY="70.0" prefHeight="300.0" prefWidth="600.0"
-			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane layoutX="153.0" layoutY="70.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0"
-					prefWidth="100.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="298.0" prefWidth="737.0">
 					<children>
-						<Label layoutX="104.0" layoutY="51.0" text="Datos de Configuración"
-							AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-						<GridPane layoutX="43.0" layoutY="104.0"
-							AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
-							AnchorPane.topAnchor="30.0">
+						<Label layoutX="104.0" layoutY="51.0" text="Datos de Configuración" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+						<GridPane layoutX="43.0" layoutY="104.0" prefHeight="75.0" prefWidth="331.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="62.0" AnchorPane.topAnchor="30.0">
 							<columnConstraints>
-								<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-									prefWidth="100.0" />
-								<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-									prefWidth="100.0" />
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="0.0" prefWidth="144.0" />
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="598.0" minWidth="8.0" prefWidth="153.0" />
 							</columnConstraints>
 							<rowConstraints>
-								<RowConstraints minHeight="10.0" prefHeight="30.0"
-									vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0"
-									vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints />
 							</rowConstraints>
 							<children>
 								<Label text="Nombre del Proyecto: " />
 								<Label text="Puerto:" GridPane.rowIndex="1" />
 
-								<TextField fx:id="projectName" prefColumnCount="90"
-									GridPane.columnIndex="1" />
-								<TextField fx:id="port" prefColumnCount="5"
-									GridPane.columnIndex="1" GridPane.rowIndex="1" />
-								<Label fx:id="messageLabel" GridPane.columnIndex="1"
-									GridPane.rowIndex="2" styleClass="hello-message" />
+								<TextField fx:id="projectName" prefColumnCount="90" prefHeight="25.0" prefWidth="209.0" GridPane.columnIndex="1" />
+								<TextField fx:id="port" prefColumnCount="5" prefHeight="25.0" prefWidth="343.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+								<Label fx:id="messageLabel" styleClass="hello-message" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 							</children>
 						</GridPane>
-						<ButtonBar layoutX="54.0" layoutY="250.0"
-							AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+						<ButtonBar layoutX="54.0" layoutY="250.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
 							<buttons>
-								<Button fx:id="btnSaveProperties" text="Regresar"
-									onAction="#goMainScreen" />
+								<Button fx:id="btnSaveProperties" onAction="#goMainScreen" text="Regresar" />
 							</buttons>
 							<buttons>
-								<Button fx:id="btnSaveProperties" text="Guardar"
-									onAction="#saveProperties" />
+								<Button fx:id="btnSaveProperties" onAction="#saveProperties" text="Guardar" />
 							</buttons>
 						</ButtonBar>
 					</children>
