--- a/brain/src/main/resources/fxml/Main.fxml
+++ b/brain/src/main/resources/fxml/Main.fxml
@@ -16,7 +16,7 @@
 			<items>
 				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="298.0">
 					<children>
-						<Label layoutX="104.0" layoutY="51.0" text="Generación de Reporte Semanal" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+						<Label styleClass="welcome-text" layoutX="104.0" layoutY="51.0" text="Reporte Semanal" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
 						<GridPane layoutX="10.0" layoutY="34.0" prefHeight="96.0" prefWidth="314.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="74.0" AnchorPane.topAnchor="34.0">
 							<columnConstraints>
 								<ColumnConstraints hgrow="SOMETIMES" maxWidth="289.0" minWidth="10.0" prefWidth="157.0" />
